se agrego un main que envuelve la lista

--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
     <header>
         <h1>Lista de comandos git</h1>
     </header>
-    <ul>
-        <ol><n>git init:</n>inicializa la carpeta git(la hace directorio)</ol>
-        <ol><n>git branch -m main/master:</n>cambia a la rama que desees</ol>
-        <ol><n>git add url:</n>agrega los cambios realizados</ol>
-        <ol><n>git add . :</n>agrega todos los cambios </ol>
-        <ol><n>git commit -m 'los cambios realizados':</n>guarda los cambios con una descripcion</ol>
-        <ol><n>git push -u origin main url:</n>para mandar lo guardado a la nube</ol>
-    </ul>
+    <main>
+        <ul>
+            <ol><n>git init:</n>inicializa la carpeta git(la hace directorio)</ol>
+            <ol><n>git branch -m main/master:</n>cambia a la rama que desees</ol>
+            <ol><n>git add url:</n>agrega los cambios realizados</ol>
+            <ol><n>git add . :</n>agrega todos los cambios </ol>
+            <ol><n>git commit -m 'los cambios realizados':</n>guarda los cambios con una descripcion</ol>
+            <ol><n>git push -u origin main url:</n>para mandar lo guardado a la nube</ol>
+        </ul>
+    </main>
 </body>
 </html>
