se cambio ol por li y se saco los <n>

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     </header>
     <main>
         <ul>
-            <ol><n>git init:</n>inicializa la carpeta git(la hace directorio)</ol>
-            <ol><n>git branch -m main/master:</n>cambia a la rama que desees</ol>
-            <ol><n>git add url:</n>agrega los cambios realizados</ol>
-            <ol><n>git add . :</n>agrega todos los cambios </ol>
-            <ol><n>git commit -m 'los cambios realizados':</n>guarda los cambios con una descripcion</ol>
-            <ol><n>git push -u origin main url:</n>para mandar lo guardado a la nube</ol>
+            <li>git init:inicializa la carpeta git(la hace directorio)</li>
+            <li>git branch -m main/master:cambia a la rama que desees</li>
+            <li>git add url:agrega los cambios realizados</li>
+            <li>git add . :agrega todos los cambios </li>
+            <li>git commit -m 'los cambios realizados':guarda los cambios con una descripcion</li>
+            <li>git push -u origin main url:para mandar lo guardado a la nube</li>
         </ul>
     </main>
 </body>
